--- a/report-jasper-reports/report-jasper-reports/pom.xml
+++ b/report-jasper-reports/report-jasper-reports/pom.xml
@@ -15,6 +15,31 @@
     <artifactId>report-jasper-reports</artifactId>
     <version>0.9.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <properties>
         <report-jasper-reports.version>0.9.0-SNAPSHOT</report-jasper-reports.version>
 
