--- a/report-jasper-reports/pom.xml
+++ b/report-jasper-reports/pom.xml
@@ -4,16 +4,138 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>pl.beone.promena.sdk.maven.parent</groupId>
+        <artifactId>promena-transformer-parent</artifactId>
+        <version>1.0.0</version>
+        <relativePath/>
+    </parent>
+
     <groupId>pl.beone.promena.transformer</groupId>
-    <artifactId>report-jasper-reports-root</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <artifactId>report-jasper-reports</artifactId>
+    <version>1.0.0</version>
 
-    <modules>
-        <module>report-jasper-reports-application-model</module>
-        <module>report-jasper-reports</module>
-        <module>report-jasper-reports-configuration</module>
-        <module>report-jasper-reports-example</module>
-    </modules>
-    <packaging>pom</packaging>
+    <properties>
+        <report-jasper-reports.version>1.0.0</report-jasper-reports.version>
 
+        <promena-communication-memory-model.version>1.0.0</promena-communication-memory-model.version>
+        <promena-communication-file-model.version>1.0.0</promena-communication-file-model.version>
+
+        <jasperreports.version>6.9.0</jasperreports.version>
+        <itextpdf.version>5.5.13.1</itextpdf.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>report-jasper-reports-application-model</artifactId>
+            <version>${report-jasper-reports.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.beone.promena.communication.memory.model</groupId>
+            <artifactId>promena-communication-memory-model-internal</artifactId>
+            <version>${promena-communication-memory-model.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.communication.file.model</groupId>
+            <artifactId>promena-communication-file-model-internal</artifactId>
+            <version>${promena-communication-file-model.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>${jasperreports.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-fonts</artifactId>
+            <version>${jasperreports.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.lib</groupId>
+            <artifactId>docker-extension-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>${itextpdf.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <excludes>
+                    <exclude>base-docker-test.properties</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>base-docker-test.properties</include>
+                </includes>
+            </testResource>
+        </testResources>
+
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
