--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,24 @@
     <artifactId>report-jasper-reports-root</artifactId>
     <version>1.0.0</version>
 
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <modules>
         <module>report-jasper-reports-application-model</module>
         <module>report-jasper-reports</module>
