[improved] Replaced old structure convention by new one (including default parameters)

--- a/pom.xml
+++ b/pom.xml
@@ -5,32 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.beone.promena.transformer</groupId>
-    <artifactId>report-jasper-reports-root</artifactId>
+    <artifactId>report-generator-jasperreport-root</artifactId>
     <version>1.0.0</version>
 
-    <repositories>
-        <repository>
-            <id>beone-releases</id>
-            <url>http://nexus.office.beone.pl/repository/releases</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>beone-releases</id>
-            <url>http://nexus.office.beone.pl/repository/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>beone-snapshots</id>
-            <url>http://nexus.office.beone.pl/repository/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <name>[TRANSFORMER] Report generator - JasperReports</name>
 
     <modules>
-        <module>report-jasper-reports-application-model</module>
-        <module>report-jasper-reports</module>
-        <module>report-jasper-reports-example</module>
-        <module>report-jasper-reports-configuration</module>
+        <module>application-model</module>
+        <module>implementation</module>
+        <module>example</module>
+        <module>configuration</module>
     </modules>
     <packaging>pom</packaging>
 
