--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -33,6 +33,11 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.base</groupId>
+            <artifactId>promena-transformer-util</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>report-generator-jasperreport-application-model</artifactId>
             <version>${report-generator-jasperreport.version}</version>
